syntax = "proto3";

package vmessocket.core.app.router.command;
option csharp_namespace = "vmessocket.Core.App.Router.Command";
option go_package = "github.com/vmessocket/vmessocket/app/router/command";
option java_package = "com.vmessocket.core.app.router.command";
option java_multiple_files = true;

import "common/net/network.proto";

message RoutingContext {
  string InboundTag = 1;
  vmessocket.core.common.net.Network Network = 2;
  repeated bytes SourceIPs = 3;
  repeated bytes TargetIPs = 4;
  uint32 SourcePort = 5;
  uint32 TargetPort = 6;
  string TargetDomain = 7;
  string Protocol = 8;
  string User = 9;
  map<string, string> Attributes = 10;
  repeated string OutboundGroupTags = 11;
  string OutboundTag = 12;
}

message SubscribeRoutingStatsRequest {
  repeated string FieldSelectors = 1;
}

message TestRouteRequest {
  RoutingContext RoutingContext = 1;
  repeated string FieldSelectors = 2;
  bool PublishResult = 3;
}

service RoutingService {
  rpc SubscribeRoutingStats(SubscribeRoutingStatsRequest)
      returns (stream RoutingContext) {}
  rpc TestRoute(TestRouteRequest) returns (RoutingContext) {}
}

message Config {}
